Fix visibility fileinput feature

--- a/popup/options/theme/options.css
+++ b/popup/options/theme/options.css
@@ -256,9 +256,6 @@ input[type="Radio"]:checked+label span:before{
 }
 
 /* Hidden features */
-#files {
-    display: none;
-}
-fileinput {
+#fileinput {
     display: none;
 }
